app-nginx-home-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app-home
  template:
    metadata:
      labels:
        app: nginx-app-home
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-content
        configMap:
          name: nginx-content
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-home
spec:
  selector:
    app: nginx-app-home
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"   # letsencrypt-staging para testes, apos usar letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - yourdomain.com.br
    - www.yourdomain.com.br
    secretName: yourdomain-com-br-tls
  rules:
  - host: yourdomain.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app-home
            port:
              number: 80
  - host: www.yourdomain.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app-home
            port:
              number: 80
